# py-ipfs-lite

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: interop.yml
docs/plans/: 2026-03-02-libp2p-integration-design.md
examples/: litepeer.py
interop/: py_peer.py  run_interop.sh
interop/go_peer/: .gitignore  go.mod  go.sum  main.go
ipfs_lite/: __init__.py  block.py  block_service.py  peer.py
ipfs_lite/bitswap/: message.py  network.py  protocol.py  wantlist.py
ipfs_lite/bitswap/pb/: message.proto  message_pb2.py
ipfs_lite/blockstore/: filesystem.py  interface.py  memory.py
ipfs_lite/dag/: codecs.py  service.py
ipfs_lite/dag/pb/: dag_pb.proto  dag_pb_pb2.py
ipfs_lite/exchange/: bitswap.py  interface.py
ipfs_lite/unixfs/: chunker.py  file.py
ipfs_lite/unixfs/pb/: unixfs.proto  unixfs_pb2.py
plans/: 2026-03-02-libp2p-integration.md  2026-03-02-py-ipfs-lite-implementation.md
tests/: test_block.py  test_block_service.py  test_peer.py
tests/bitswap/: test_message.py  test_network.py  test_proto.py  test_protocol.py
tests/blockstore/: test_interface.py
tests/dag/: test_service.py
tests/exchange/: test_bitswap.py
tests/integration/: test_dht_routing.py  test_two_peers.py
tests/unixfs/: test_file.py
