[project]
name = "py-ipfs-lite"
version = "0.1.0"
description = "IPFS-Lite: embeddable lightweight IPFS peer for IPLD applications"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "multiformats>=0.3.0",
    "cbor2>=5.0.0",
    "protobuf>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]
libp2p = [
    "libp2p>=0.2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]
